opgeslagen object wordt weer teruggegeven -met timestamp
